src/pages/LandingPage/Home/FooterComponent/FooterComponent.module.css
.footer_container {
  padding: 3.125rem 0.625rem;
  background: #383b3a;
}

.footer_info {
  display: flex;
  width: 65rem;
  height: 8.25rem;
  padding: 1.25rem 0rem;
  flex-direction: column;
  justify-content: space-between;
  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
  margin: 0 auto;
  margin-bottom: 3.25rem;
}
.podcast_logo {
  display: flex;
  padding: 0.3125rem 0.625rem;
  align-items: center;
}
.links ul {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  gap: 2.5rem;
  align-self: stretch;
  float: right;
  margin: 0;
}
.links ul li {
  list-style-type: none;
}
.links ul li a {
  text-decoration: none;
  color: #fff;
  font-family: Clash Display;
  font-size: 1rem;
}
.footer_details {
  display: flex;
  justify-content: space-between;
  width: 65rem;
  margin: 0 auto;
}
.rights {
  display: flex;
  justify-content: center;
  align-items: center;
}
.rights p {
  color: #fff;
  font-size: 0.875rem;
  margin: 0;
}
.terms_services ul {
  display: flex;
  align-items: flex-start;
  gap: 2.5rem;
  margin: 0;
}
.terms_services ul li {
  list-style-type: none;
}
.terms_services ul li a {
  color: #fff;
  font-size: 0.875rem;
}

/* Media queries */

/* Phone version */
@media only screen and (max-width: 799px) {
  .footer_container {
    width: 100%;
    padding: 1.25rem;
  }
  .footer_info {
    width: 100%;
  }
  .footer_details {
    width: 100%;
  }
}

/* Tablet version */
@media only screen and (min-width: 800px) and (max-width: 1023px) {
  .footer_container {
    padding: 3.125rem 3.75rem;
  }
  .footer_info {
    width: 100%;
  }
  .footer_details {
    width: 100%;
  }
  .links ul {
    align-items: flex-start;
    float: none;
  }
}

